--- a/typing-game/index.html
+++ b/typing-game/index.html
@@ -9,18 +9,18 @@
 </head>
 
 <body>
-    <button class="btn btn-primary">부트스트랩</button>
-    <button class="btn btn-secondary">부트스트랩</button>
-    <button class="btn btn-success">부트스트랩</button>
-    <button class="btn btn-danger">부트스트랩</button>
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-          <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">Next</a></li>
-        </ul>
-      </nav>
+    <div class="container">
+        <div class="row">
+          <div class="col-xxl-3 col-lg-10 bg-primary">
+            Column
+          </div>
+          <div class="col-xxl-3 col-lg-1 bg-secondary">
+            Column
+          </div>
+          <div class="col-xxl-3 col-lg-1 bg-success">
+            Column
+          </div>
+        </div>
+      </div>
 </body>
 </html>
