--- a/typing-game/index.html
+++ b/typing-game/index.html
@@ -8,19 +8,46 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 
-<body>
-    <div class="container">
+<body class="bg-dark text-white">
+    <header class="bg-danger text-center p-3 mb-5">
+        <h1>Typing Master</h1>
+    </header>
+    <div class="container text-center">
         <div class="row">
-          <div class="col-xxl-3 col-lg-10 bg-primary">
-            Column
-          </div>
-          <div class="col-xxl-3 col-lg-1 bg-secondary">
-            Column
-          </div>
-          <div class="col-xxl-3 col-lg-1 bg-success">
-            Column
-          </div>
+            <div class="col-md-6 mx-auto">
+                <p class="lead">
+                    주어진 단어를 <span class="text-success">5</span>초 안에 타이핑 하기
+                </p>
+                <h2 class="displya-2 mb-5" id="current-word">Start</h2>
+                <input type="text" class="form-control form-control-lg" placeholder="start typing..." id="word-input">
+                <h4 class="mt-3" id="message"></h4>
+            </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="col-12 col-xl-6">
+                <h3>
+                    Time left: <span id="time">0</span>
+                </h3>
+            </div>
+            <div class="col-12 col-xl-6">
+                <h3> score : <span id="score">0</span></h3>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col">
+                <div class="card card-body bg-danger text-white">
+                    <h5>안내 방법</h5>
+                    <p>각 단어를 주어진 시간 안에 타이핑하고, 다시 시작하려면 주어진 단어를 입력하세요</p>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-md-12">
+                <button class="col-12 col-sm-3 btn btn-primary">초급</button>
+                <button class="col-12 col-sm-3 btn btn-secondary">중급</button>
+                <button class="col-12 col-sm-3 btn btn-success">싱급</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
