--- a/typing-game/index.html
+++ b/typing-game/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="bg-dark text-white">
-    <header class="bg-danger text-center p-3 mb-5">
+    <header class="bg-secondary text-center p-3 mb-5">
         <h1>Typing Master</h1>
     </header>
     <div class="container text-center">
@@ -35,7 +35,7 @@
         </div>
         <div class="row mt-5">
             <div class="col">
-                <div class="card card-body bg-danger text-white">
+                <div class="card card-body bg-secondary text-white">
                     <h5>안내 방법</h5>
                     <p>각 단어를 주어진 시간 안에 타이핑하고, 다시 시작하려면 주어진 단어를 입력하세요</p>
                 </div>
@@ -49,5 +49,6 @@
             </div>
         </div>
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
